fix navigation colors in dark mode

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,6 +3,7 @@
     --color-light2: #F6E8E1;
     --color-red: #BD3434;
     --color-green: #34bd3b;
+    --color-piano-black: #2b2b2b;
     --color-piano-white-key: #fff;
     --color-piano-black-key: #2b2b2b;
     --color-white: #fff;
@@ -15,6 +16,7 @@
     --color-light2: #3b3b3b;
     --color-red: #ff7f7f;
     --color-green: #7fff7f;
+    --color-piano-black: #fff;
     --color-piano-white-key: #fff;
     --color-piano-black-key: #2b2b2b;
     --color-white: #000;
